Fix spacing on icon-list component

--- a/media/css/cms/components/flare26-icon-list.css
+++ b/media/css/cms/components/flare26-icon-list.css
@@ -20,6 +20,7 @@
     display: flex;
     gap: var(--token-layout-3xs);
     margin-block-end: 0;
+    padding-block: var(--token-spacing-sm);
 }
 
 .fl-icon-text-list .fl-icon-wrap {
