--- a/media/css/cms/components/flare26-two-column-cards.css
+++ b/media/css/cms/components/flare26-two-column-cards.css
@@ -31,6 +31,10 @@
     position: relative;
 }
 
+.fl-two-column-card .fl-icon-text-list li {
+    padding-block: 0;
+}
+
 .fl-two-column-card .media img {
     inline-size: 100%;
     margin-block-end: 0;
